// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventHeader component renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      undefined,
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "url",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
          "fontSize": 14,
          "marginBottom": -2,
        }
      }
    >
      Carlos Pinto
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#DEDEDE",
          "fontSize": 10,
        }
      }
    >
      @
      cpinto7
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "bottom": 0,
          "color": "#FFFFFF",
          "fontSize": 12,
          "left": 10,
          "position": "absolute",
        }
      }
    >
      Invalid date
    </Text>
  </View>
  <Image
    source={
      Object {
        "uri": "InstagramIcon",
      }
    }
    style={
      Object {
        "height": 30,
        "position": "absolute",
        "right": 9,
        "top": 9,
        "width": 30,
      }
    }
  />
</View>
`;

exports[`EventHeader component renders correctly when overlayed styles are applied 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      Object {
        "backgroundColor": "transparent",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 750,
        "zIndex": 2,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "url",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
          "fontSize": 14,
          "marginBottom": -2,
        }
      }
    >
      Carlos Pinto
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#DEDEDE",
          "fontSize": 10,
        }
      }
    >
      @
      cpinto7
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "bottom": 0,
          "color": "#FFFFFF",
          "fontSize": 12,
          "left": 10,
          "position": "absolute",
        }
      }
    >
      Invalid date
    </Text>
  </View>
  <Image
    source={
      Object {
        "uri": "InstagramIcon",
      }
    }
    style={
      Object {
        "height": 30,
        "position": "absolute",
        "right": 9,
        "top": 9,
        "width": 30,
      }
    }
  />
</View>
`;
